fix multiple select options styling
when the multiple select control loses focus, selected options are not showing as selected, because the background color styling has been reset. We need to put new styling in place.

--- a/skins/kama/reset.css
+++ b/skins/kama/reset.css
@@ -109,6 +109,11 @@ https://ckeditor.com/docs/ckeditor4/latest/guide/skin_sdk_reset.html
 	box-sizing: border-box;
 }
 
+.cke_reset_all select[multiple] option:checked
+{
+	background-color: rgb(206, 206, 206);
+}
+
 .cke_reset_all table
 {
 	table-layout: auto;
